--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		</style>
 		<link rel="stylesheet" href="css/styles.css" />
 	</head>
+	
 	<body>
 		<main>
 			<section>
@@ -29,7 +30,13 @@
 					<label for="tab_1">
 						<div id="content" class="sharebnb">ShareBnB</div>
 						<div class="tab-content">
-							<h1>moin</h1>
+							<div style="max-width: 1000px; margin-left: auto; text-align: right;">
+								<h3>
+									In vielen Großstädten wird Wohnraum knapp, während immer mehr Wohnungen über Plattformen wie Airbnb an Tourist*innen vermietet werden. 
+									Dies trägt zur Verdrängung von Einheimischen und steigenden Mietpreisen bei. 
+									Unsere Visualisierung zeigt die Verteilung von Airbnb-Angeboten in sieben Städten und soll ein Bewusstsein für die Auswirkungen auf den Wohnungsmarkt schaffen.
+								</h3>
+							</div>
 							<!-- es wird angezeigt, aber leider ist es weiß, weil der "tab content" in der css weiß ist.  -->
 						</div>
 						<style>
