--- a/index.html
+++ b/index.html
@@ -6,44 +6,21 @@
 		<title>ShareBnB</title>
 		<link
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
-			rel="stylesheet"
-		/>
-		<style>
-			body {
-				font-family: "Inter", sans-serif;
-			}
-			h1 {
-				font-weight: 700;
-			}
-			.city-name {
-				font-weight: bold;
-				text-transform: uppercase;
-			}
-		</style>
+			rel="stylesheet"/>
 		<link rel="stylesheet" href="css/styles.css" />
 	</head>
-	
 	<body>
 		<main>
 			<section>
 				<div class="container">
 					<label for="tab_1">
 						<div id="content" class="sharebnb">ShareBnB</div>
-						<div class="tab-content">
-							<div style="max-width: 1000px; margin-left: auto; text-align: right;">
-								<h3>
-									In vielen Großstädten wird Wohnraum knapp, während immer mehr Wohnungen über Plattformen wie Airbnb an Tourist*innen vermietet werden. 
-									Dies trägt zur Verdrängung von Einheimischen und steigenden Mietpreisen bei. 
-									Unsere Visualisierung zeigt die Verteilung von Airbnb-Angeboten in sieben Städten und soll ein Bewusstsein für die Auswirkungen auf den Wohnungsmarkt schaffen.
-								</h3>
-							</div>
-							<!-- es wird angezeigt, aber leider ist es weiß, weil der "tab content" in der css weiß ist.  -->
+						<div class="tab-content" style="max-width: 1000px; margin-left: auto; text-align: right;">
+							<h3>In vielen Großstädten wird Wohnraum knapp, während immer mehr Wohnungen über Plattformen wie Airbnb an Tourist*innen vermietet werden. 
+								Dies trägt zur Verdrängung von Einheimischen und steigenden Mietpreisen bei. 
+								Unsere Visualisierung zeigt die Verteilung von Airbnb-Angeboten in sieben Städten und soll ein Bewusstsein für die Auswirkungen auf den Wohnungsmarkt schaffen.
+							</h3>
 						</div>
-						<style>
-							.sharebnb {
-								color: rgb(255, 255, 255);
-							}
-						</style>
 					</label>
 					<label for="tab_2">
 						<div id="content" class="ny">NEW YORK CITY</div>
