Refactor CSS styles and HTML structure

--- a/index.html
+++ b/index.html
@@ -16,25 +16,20 @@
 					<label for="tab_1">
 						<div id="content" class="sharebnb">ShareBnB</div>
 						<div class="tab-content">
-							<div style="max-width: 1000px; margin-left: auto; text-align: right;">
+							<div>
 								<h3>
 									In vielen Großstädten wird Wohnraum knapp, während immer mehr Wohnungen über Plattformen wie Airbnb an Tourist*innen vermietet werden. 
 									Dies trägt zur Verdrängung von Einheimischen und steigenden Mietpreisen bei. 
 									Unsere Visualisierung zeigt die Verteilung von Airbnb-Angeboten in sieben Städten und soll ein Bewusstsein für die Auswirkungen auf den Wohnungsmarkt schaffen.
 								</h3>
 							</div>
-							<div style="max-width: 1000px; margin-left: auto; text-align: right;">
+							<div>
 								<h6>
 									Franklin Hernandez-Castro 
-									Data Visualisation, HfG Schwäbisch Gmünd IG3
+									<br>Data Visualisation<br> HfG Schwäbisch Gmünd IG3 
+									<br>Jonas Wienberg, Philipp Maginot, Marlon Mutlu
 								</h6>
 							</div>
-								<div style="position: absolute; bottom: fixed; max-width: 1000px; margin-left: auto; text-align: right;">
-									<h4>
-										Jonas Wienberg, Philipp Maginot, Marlon Mutlu
-									</h4>
-								</div>
-							<!-- es wird angezeigt, aber leider ist es weiß, weil der "tab content" in der css weiß ist.  -->
 						</div>
 					</label>
 					<label for="tab_2">
