--- a/index.html
+++ b/index.html
@@ -645,5 +645,6 @@
 			</section>
 		</main>
 		<script type="module" src="js/script.js"></script>
+		<script type="module" src="js/script4.js"></script>
 	</body>
 </html>
