--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>ShareBnB</title>
 		<link
-			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
-			rel="stylesheet"/>
-		<link rel="stylesheet" href="css/styles.css" />
+href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"rel="stylesheet"/>
+		
+<link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" href="css/layout.css">
+<link rel="stylesheet" href="css/tabs.css">
+<link rel="stylesheet" href="css/tab-interaction.css">
+<link rel="stylesheet" href="css/content.css">
+<link rel="stylesheet" href="css/navigation.css">
+
+			<!--<link rel="stylesheet" href="css/styles.css" /> -->
 	</head>
 	<body>
 		<main>
