--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 							</div>
 						</div>
 					</label>
+
 					<label for="tab_2">
 						<div id="content" class="ny">NEW YORK CITY</div>
 						<div class="tab-content">
@@ -52,73 +53,8 @@
 								<span id="tourists-new-york">Loading...</span>
 							</h3>
 							<h3>
-								<span id="airbnb-index-new-york"
-									>Loading...</span
-								>
+								<span id="airbnb-index-new-york">Loading...</span>
 							</h3>
-
-							<div id="map-nyc" class="map"></div>
-							<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-							<style>
-								.map {
-									width: 120%; /* Make the map fill more than the entire width */
-									height: 200px; /* Increase the height of the map */
-									margin-left: -200%; /* Move the map 120% to the left */
-								}
-							</style>
-							<script>
-								// Initialize the map and set the center to New York City
-								const mapNYC = L.map("map-nyc", {
-									center: [40.7128, -74.006], // Coordinates for New York City
-									zoom: 10, // Initial zoom level
-									zoomControl: false, // Disables zoom control
-									dragging: false, // Disables dragging (panning)
-									scrollWheelZoom: true, // Enables zoom via scroll wheel
-									doubleClickZoom: false, // Disables zoom via double-click
-									touchZoom: false, // Disables touch zoom (e.g., pinch-to-zoom)
-									keyboard: false, // Disables keyboard control
-								});
-
-								// Add a transparent landmass tile layer
-								L.tileLayer(
-									"https://{s}.basemaps.cartocdn.com/light_nolabels/{z}/{x}/{y}{r}.png",
-									{
-										maxZoom: 18,
-										attribution:
-											"Map data © OpenStreetMap contributors, CartoDB",
-										opacity: 0.8, // Transparent landmasses
-									}
-								).addTo(mapNYC);
-
-								// Function to load JSON data
-								fetch("nyc.json")
-									.then((response) => response.json())
-									.then((data) => {
-										// Iterate through all Airbnb listings and add markers
-										data.forEach((listing) => {
-											const lat = listing.coordinates.lat;
-											const lon = listing.coordinates.lon;
-
-											// Create a marker for each coordinate
-											L.circleMarker([lat, lon], {
-												color: "white",
-												fillColor: "#ffffff",
-												fillOpacity: 1,
-												radius: 5,
-											})
-												.addTo(mapNYC)
-												.bindPopup(
-													`<b>${listing.name}</b><br>Neighbourhood: ${listing.neighbourhood}`
-												);
-										});
-									})
-									.catch((error) =>
-										console.error(
-											"Error loading the JSON file:",
-											error
-										)
-									);
-							</script>
 							<div class="arrow-nav">
 								<button class="arrow" id="prev-2"><</button>
 								<div id="content-2" class="ny">NEW YORK 1</div>
@@ -144,68 +80,6 @@
 							<h3>
 								<span id="airbnb-index-rio">Loading...</span>
 							</h3>
-							<div id="map-rio" class="map"></div>
-							<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-							<style>
-								.map {
-									width: 120%; /* Make the map fill more than the entire width */
-									height: 200px; /* Increase the height of the map */
-									margin-left: -200%; /* Move the map 120% to the left */
-								}
-							</style>
-							<script>
-								// Initialize the map and set the center to Rio de Janeiro
-								const mapRio = L.map("map-rio", {
-									center: [-22.9068, -43.1729], // Coordinates for Rio de Janeiro
-									zoom: 10, // Initial zoom level
-									zoomControl: false, // Disables zoom control
-									dragging: false, // Disables dragging (panning)
-									scrollWheelZoom: true, // Enables zoom via scroll wheel
-									doubleClickZoom: false, // Disables zoom via double-click
-									touchZoom: false, // Disables touch zoom (e.g., pinch-to-zoom)
-									keyboard: false, // Disables keyboard control
-								});
-
-								// Add a transparent landmass tile layer
-								L.tileLayer(
-									"https://{s}.basemaps.cartocdn.com/light_nolabels/{z}/{x}/{y}{r}.png",
-									{
-										maxZoom: 18,
-										attribution:
-											"Map data © OpenStreetMap contributors, CartoDB",
-										opacity: 0.8, // Transparent landmasses
-									}
-								).addTo(mapRio);
-
-								// Function to load JSON data
-								fetch("rio.json")
-									.then((response) => response.json())
-									.then((data) => {
-										// Iterate through all Airbnb listings and add markers
-										data.forEach((listing) => {
-											const lat = listing.coordinates.lat;
-											const lon = listing.coordinates.lon;
-
-											// Create a marker for each coordinate
-											L.circleMarker([lat, lon], {
-												color: "white",
-												fillColor: "#ffffff",
-												fillOpacity: 1,
-												radius: 5,
-											})
-												.addTo(mapRio)
-												.bindPopup(
-													`<b>${listing.name}</b><br>Neighbourhood: ${listing.neighbourhood}`
-												);
-										});
-									})
-									.catch((error) =>
-										console.error(
-											"Error loading the JSON file:",
-											error
-										)
-									);
-							</script>
 							<div class="arrow-nav">
 								<button class="arrow" id="prev-3"><</button>
 								<div id="content-3" class="ny">RIO 1</div>
@@ -235,73 +109,8 @@
 								<span id="tourists-cape-town">Loading...</span>
 							</h3>
 							<h3>
-								<span id="airbnb-index-cape-town"
-									>Loading...</span
-								>
+								<span id="airbnb-index-cape-town">Loading...</span>
 							</h3>
-							<div id="map" class="map"></div>
-							<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-							<style>
-								.map {
-									width: 120%; /* Make the map fill more than the entire width */
-									height: 200px; /* Increase the height of the map */
-									margin-left: -200%; /* Move the map 120% to the left */
-								}
-							</style>
-							<script>
-								// Initialize the map and set the center to Cape Town
-								const map = L.map("map", {
-									center: [-33.9249, 18.4241], // Coordinates for Cape Town
-									zoom: 10, // Initial zoom level
-									zoomControl: false, // Disables zoom control
-									dragging: false, // Disables dragging (panning)
-									scrollWheelZoom: true, // Enables zoom via scroll wheel
-									doubleClickZoom: false, // Disables zoom via double-click
-									touchZoom: false, // Disables touch zoom (e.g., pinch-to-zoom)
-									keyboard: false, // Disables keyboard control
-								});
-
-								// Add a transparent landmass tile layer
-								L.tileLayer(
-									"https://{s}.basemaps.cartocdn.com/light_nolabels/{z}/{x}/{y}{r}.png",
-									{
-										maxZoom: 18,
-										attribution:
-											"Map data © OpenStreetMap contributors, CartoDB",
-										opacity: 0.8, // Transparent landmasses
-									}
-								).addTo(map);
-
-								// Function to load JSON data
-								fetch("capetown.json")
-									.then((response) => response.json())
-									.then((data) => {
-										// Iterate through all Airbnb listings and add markers
-										data.forEach((listing) => {
-											const lat = listing.coordinates.lat;
-											const lon = listing.coordinates.lon;
-
-											// Create a marker for each coordinate
-											L.circleMarker([lat, lon], {
-												color: "white",
-												fillColor: "#ffffff",
-												fillOpacity: 1,
-												radius: 5,
-											})
-												.addTo(map)
-												.bindPopup(
-													`<b>${listing.name}</b><br>Neighbourhood: ${listing.neighbourhood}`
-												);
-										});
-									})
-									.catch((error) =>
-										console.error(
-											"Error loading the JSON file:",
-											error
-										)
-									);
-							</script>
-
 							<div class="arrow-nav">
 								<button class="arrow" id="prev-4"><</button>
 								<div id="content-4" class="ny">CAPE TOWN 1</div>
@@ -328,68 +137,6 @@
 							<h3>
 								<span id="airbnb-index-sydney">Loading...</span>
 							</h3>
-							<div id="map-sydney" class="map"></div>
-							<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-							<style>
-								.map {
-									width: 120%; /* Make the map fill more than the entire width */
-									height: 200px; /* Increase the height of the map */
-									margin-left: -200%; /* Move the map 120% to the left */
-								}
-							</style>
-							<script>
-								// Initialize the map and set the center to Sydney
-								const mapSydney = L.map("map-sydney", {
-									center: [-33.8688, 151.2093], // Coordinates for Sydney
-									zoom: 10, // Initial zoom level
-									zoomControl: false, // Disables zoom control
-									dragging: false, // Disables dragging (panning)
-									scrollWheelZoom: true, // Enables zoom via scroll wheel
-									doubleClickZoom: false, // Disables zoom via double-click
-									touchZoom: false, // Disables touch zoom (e.g., pinch-to-zoom)
-									keyboard: false, // Disables keyboard control
-								});
-
-								// Add a transparent landmass tile layer
-								L.tileLayer(
-									"https://{s}.basemaps.cartocdn.com/light_nolabels/{z}/{x}/{y}{r}.png",
-									{
-										maxZoom: 18,
-										attribution:
-											"Map data © OpenStreetMap contributors, CartoDB",
-										opacity: 0.8, // Transparent landmasses
-									}
-								).addTo(mapSydney);
-
-								// Function to load JSON data
-								fetch("sydney.json")
-									.then((response) => response.json())
-									.then((data) => {
-										// Iterate through all Airbnb listings and add markers
-										data.forEach((listing) => {
-											const lat = listing.coordinates.lat;
-											const lon = listing.coordinates.lon;
-
-											// Create a marker for each coordinate
-											L.circleMarker([lat, lon], {
-												color: "white",
-												fillColor: "#ffffff",
-												fillOpacity: 1,
-												radius: 5,
-											})
-												.addTo(mapSydney)
-												.bindPopup(
-													`<b>${listing.name}</b><br>Neighbourhood: ${listing.neighbourhood}`
-												);
-										});
-									})
-									.catch((error) =>
-										console.error(
-											"Error loading the JSON file:",
-											error
-										)
-									);
-							</script>
 						</div>
 					</label>
 
@@ -411,73 +158,11 @@
 							<h3>
 								<span id="airbnb-index-tokyo">Loading...</span>
 							</h3>
-							<div id="map-tokyo" class="map"></div>
-							<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-							<style>
-								.map {
-									width: 120%; /* Make the map fill more than the entire width */
-									height: 200px; /* Increase the height of the map */
-									margin-left: -200%; /* Move the map 120% to the left */
-								}
-							</style>
-							<script>
-								// Initialize the map and set the center to Tokyo
-								const mapTokyo = L.map("map-tokyo", {
-									center: [35.6895, 139.6917], // Coordinates for Tokyo
-									zoom: 10, // Initial zoom level
-									zoomControl: false, // Disables zoom control
-									dragging: false, // Disables dragging (panning)
-									scrollWheelZoom: true, // Enables zoom via scroll wheel
-									doubleClickZoom: false, // Disables zoom via double-click
-									touchZoom: false, // Disables touch zoom (e.g., pinch-to-zoom)
-									keyboard: false, // Disables keyboard control
-								});
-
-								// Add a transparent landmass tile layer
-								L.tileLayer(
-									"https://{s}.basemaps.cartocdn.com/light_nolabels/{z}/{x}/{y}{r}.png",
-									{
-										maxZoom: 18,
-										attribution:
-											"Map data © OpenStreetMap contributors, CartoDB",
-										opacity: 0.8, // Transparent landmasses
-									}
-								).addTo(mapTokyo);
-
-								// Function to load JSON data
-								fetch("tokyo.json")
-									.then((response) => response.json())
-									.then((data) => {
-										// Iterate through all Airbnb listings and add markers
-										data.forEach((listing) => {
-											const lat = listing.coordinates.lat;
-											const lon = listing.coordinates.lon;
-
-											// Create a marker for each coordinate
-											L.circleMarker([lat, lon], {
-												color: "white",
-												fillColor: "#ffffff",
-												fillOpacity: 1,
-												radius: 5,
-											})
-												.addTo(mapTokyo)
-												.bindPopup(
-													`<b>${listing.name}</b><br>Neighbourhood: ${listing.neighbourhood}`
-												);
-										});
-									})
-									.catch((error) =>
-										console.error(
-											"Error loading the JSON file:",
-											error
-										)
-									);
-							</script>
+							</h3>
 						</div>
 					</label>
 
 					<label for="tab_7">
-						<div id="content" class="istanbul">ISTANBUL</div>
 						<div class="tab-content">
 							<h1>
 								N° of Airbnb listings
@@ -497,65 +182,6 @@
 									>Loading...</span
 								>
 							</h3>
-							<div id="map-istanbul" class="map"></div>
-							<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-							<style>
-								.map {
-									width: 120%; /* Make the map fill more than the entire width */
-									height: 200px; /* Increase the height of the map */
-									margin-left: -200%; /* Move the map 120% to the left */
-								}
-							</style>
-							<script>
-								// Initialize the map and set the center to Istanbul
-								const mapIstanbul = L.map("map-istanbul", {
-									center: [41.0082, 28.9784], // Coordinates for Istanbul
-									zoom: 10, // Initial zoom level
-									zoomControl: false, // Disables zoom control
-									dragging: false, // Disables dragging (panning)
-									scrollWheelZoom: true, // Enables zoom via scroll wheel
-									doubleClickZoom: false, // Disables zoom via double-click
-									touchZoom: false, // Disables touch zoom (e.g., pinch-to-zoom)
-									keyboard: false, // Disables keyboard control
-								});
-
-								// Add a transparent landmass tile layer
-								L.tileLayer(
-									"https://{s}.basemaps.cartocdn.com/light_nolabels/{z}/{x}/{y}{r}.png",
-									{
-										maxZoom: 18,
-										attribution:
-											"Map data © OpenStreetMap contributors, CartoDB",
-										opacity: 0.8, // Transparent landmasses
-									}
-								).addTo(mapIstanbul);
-
-								fetch("istanbul.json")
-									.then((response) => response.json())
-									.then((data) => {
-										data.forEach((listing) => {
-											const lat = listing.coordinates.lat;
-											const lon = listing.coordinates.lon;
-
-											L.circleMarker([lat, lon], {
-												color: "white",
-												fillColor: "#ffffff",
-												fillOpacity: 1,
-												radius: 5,
-											})
-												.addTo(mapIstanbul)
-												.bindPopup(
-													`<b>${listing.name}</b><br>Neighbourhood: ${listing.neighbourhood}`
-												);
-										});
-									})
-									.catch((error) =>
-										console.error(
-											"Error loading the JSON file:",
-											error
-										)
-									);
-							</script>
 						</div>
 					</label>
 
@@ -577,66 +203,6 @@
 							<h3>
 								<span id="airbnb-index-paris">Loading...</span>
 							</h3>
-							<div id="map-paris" class="map"></div>
-							<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-							<style>
-								.map {
-									width: 120%; 
-									height: 200px; 
-									margin-left: -200%; 
-								}
-							</style>
-							<script>
-								const mapParis = L.map("map-paris", {
-									center: [48.8566, 2.3522], 
-									zoom: 10, 
-									zoomControl: false, 
-									dragging: false, 
-									scrollWheelZoom: true, 
-									doubleClickZoom: false, 
-									touchZoom: false, 
-									keyboard: false, 
-								});
-
-								L.tileLayer(
-									"https://{s}.basemaps.cartocdn.com/light_nolabels/{z}/{x}/{y}{r}.png",
-									{
-										maxZoom: 18,
-										attribution:
-											"Map data © OpenStreetMap contributors, CartoDB",
-										opacity: 0.8, 
-									}
-								).addTo(mapParis);
-
-								// Function to load JSON data
-								fetch("paris.json")
-									.then((response) => response.json())
-									.then((data) => {
-										// Iterate through all Airbnb listings and add markers
-										data.forEach((listing) => {
-											const lat = listing.coordinates.lat;
-											const lon = listing.coordinates.lon;
-
-											// Create a marker for each coordinate
-											L.circleMarker([lat, lon], {
-												color: "white",
-												fillColor: "#ffffff",
-												fillOpacity: 1,
-												radius: 5,
-											})
-												.addTo(mapParis)
-												.bindPopup(
-													`<b>${listing.name}</b><br>Neighbourhood: ${listing.neighbourhood}`
-												);
-										});
-									})
-									.catch((error) =>
-										console.error(
-											"Error loading the JSON file:",
-											error
-										)
-									);
-							</script>
 						</div>
 					</label>
 				</div>
