Refactor index.html to update the name and order of contributors

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 							</div>
 							<div>
 								<h6>
-									Franklin Hernandez-Castro 
+									Dr. Franklin Hernández Castro
 									<br>Data Visualisation<br> HfG Schwäbisch Gmünd IG3 
-									<br>Jonas Wienberg, Philipp Maginot, Marlon Mutlu
+									<br>Jonas Wienberg, Marlon Mutlu, Philipp Maginot
 								</h6>
 							</div>
 						</div>
