Refactor indextest.html to correct grammar in the description of Tokyo

--- a/indextest.html
+++ b/indextest.html
@@ -10,7 +10,7 @@
 
     <div class="header">
         <h1>TOKIO</h1>
-        <p>Tokio ist eines der größten Monopole der Welt</p>
+        <p>Tokio ist eine der größten Monopole der Welt</p>
         <div class="count">35.456 AirBnB's</div>
     </div>
 
