added tag istanbul back

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 							<h3>
 								<span id="airbnb-index-rio">Loading...</span>
 							</h3>
+
 							<div class="arrow-nav">
 								<button class="arrow" id="prev-3"><</button>
 								<div id="content-3" class="ny">RIO 1</div>
@@ -193,6 +194,7 @@
 					</label>
 
 					<label for="tab_7">
+						<div id="content" class="istanbul">ISTANBUL</div>
 						<div class="tab-content">
 							<h1>
 								N° of Airbnb listings
