Refactor layout.css, index.html, reset.css, tab-interaction.css, indextest2.html, navigation.css, widget.css, and content.css

--- a/indextest2.html
+++ b/indextest2.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>D3 Bar Chart - Room Types</title>
-  <script src="https://d3js.org/d3.v6.min.js"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-    }
-    svg {
-      border: 1px solid black;
-    }
-  </style>
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>D3 Bar Chart - Room Types</title>
+		<script src="https://d3js.org/d3.v6.min.js"></script>
+		<style>
+			body {
+				font-family: Arial, sans-serif;
+			}
+			svg {
+				border: 1px solid black;
+			}
+		</style>
+	</head>
+	<body>
+		<h2>D3.js Bar Chart - Room Types</h2>
 
-  <h2>D3.js Bar Chart - Room Types</h2>
+		<div id="chart"></div>
 
-  <div id="chart"></div>
-
-  <script src="js/script5_copy.js"></script>
-
-</body>
+		<script src="js/script5_copy.js"></script>
+	</body>
 </html>
