Refactor index.html and script.js files

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<link rel="stylesheet" href="css/content.css">
 		<link rel="stylesheet" href="css/navigation.css">
 		<link rel="stylesheet" href="css/widget.css">
-		<script src="js/room_type-capetown_barchart.js"></script>
 		<script src="https://d3js.org/d3.v6.min.js"></script>
+		<script src="path/to/room_type-capetown_barchart.js"></script>
 		<style>
             body {
                 font-family: Arial, sans-serif;
@@ -52,7 +52,7 @@
 						<div class="tab-content">
 							<h1>
 								N° of Airbnb listings
-								<span class="city-name"></span>
+								<span class="city-name">New York City</span>
 								<span id="total-ids-new-york">Loading...</span>
 							</h1>
 							<h3>
