--- a/index.html
+++ b/index.html
@@ -12,18 +12,13 @@
 		<link rel="stylesheet" href="css/content.css">
 		<link rel="stylesheet" href="css/navigation.css">
 		<link rel="stylesheet" href="css/widget.css">
-		<script src="https://d3js.org/d3.v6.min.js"></script>
-		<script src="js/room_type-capetown_barchart.js"></script>
-		<style>
-            body {
-                font-family: Arial, sans-serif;
-            }
-            svg {
-                border: 1px solid black;
-            }
-        </style>
 	</head>
 	<body>
+		<script src="https://d3js.org/d3.v6.min.js"></script>
+		<script src="js/room_type-capetown_barchart.js"></script>
+		<script src="js/script.js"></script>
+		<script type="module" src="js/script4.js"></script>
+		<script src="js/widget.js"></script>
 		<main>
 			<section>
 				<div class="container">
@@ -254,9 +249,5 @@
 				</div>
 			</section>
 		</main>
-		<script type="module" src="js/script.js"></script>
-		<script type="module" src="js/script4.js"></script>
-		<script src="js/widget.js"></script>
-		<script src="js/room_type-capetown_barchart.js"></script>
 	</body>
 </html>
