Revert "Refactor index.html: Remove unused CSS styles and reorganize script imports"
This reverts commit 4adc5680bbfdb0edb2976e1d31615f3893f08a83.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
 		<link rel="stylesheet" href="css/content.css">
 		<link rel="stylesheet" href="css/navigation.css">
 		<link rel="stylesheet" href="css/widget.css">
-	</head>
-	<body>
 		<script src="https://d3js.org/d3.v6.min.js"></script>
 		<script src="js/room_type-capetown_barchart.js"></script>
-		<script src="js/script.js"></script>
-		<script type="module" src="js/script4.js"></script>
-		<script src="js/widget.js"></script>
+		<style>
+            body {
+                font-family: Arial, sans-serif;
+            }
+            svg {
+                border: 1px solid black;
+            }
+        </style>
+	</head>
+	<body>
 		<main>
 			<section>
 				<div class="container">
@@ -249,5 +254,9 @@
 				</div>
 			</section>
 		</main>
+		<script type="module" src="js/script.js"></script>
+		<script type="module" src="js/script4.js"></script>
+		<script src="js/widget.js"></script>
+		<script src="js/room_type-capetown_barchart.js"></script>
 	</body>
 </html>
