--- a/index.html
+++ b/index.html
@@ -14,14 +14,7 @@
 		<link rel="stylesheet" href="css/widget.css">
 		<script src="https://d3js.org/d3.v6.min.js"></script>
 		<script src="js/room_type-capetown_barchart.js"></script>
-		<style>
-            body {
-                font-family: Arial, sans-serif;
-            }
-            svg {
-                border: 1px solid black;
-            }
-        </style>
+
 	</head>
 	<body>
 		<main>
@@ -82,11 +75,54 @@
 							<div id="modal1" class="modal">
 								<div class="modal-content">
 									<span class="close" id="close1">&times;</span>
-									<div id="room-type-chart"></div>
+									<div id="chart"></div>
 								</div>
 							</div>
 							<script>
-								src="js/room_type-capetown_barchart.js"	/*hier wird einfach ausgelagert*/
+								document.addEventListener('DOMContentLoaded', () => {
+									d3.json("data/capetown2.json").then(function (data) {
+										const margin = { top: 20, right: 30, bottom: 40, left: 40 };
+										const width = 800 - margin.left - margin.right;
+										const height = 400 - margin.top - margin.bottom;
+
+										const svg = d3
+											.select("#chart")
+											.append("svg")
+											.attr("width", width + margin.left + margin.right)
+											.attr("height", height + margin.top + margin.bottom)
+											.append("g")
+											.attr("transform", `translate(${margin.left},${margin.top})`);
+
+										const x = d3.scaleBand()
+											.domain(data.map(d => d.room_type))
+											.range([0, width])
+											.padding(0.1);
+
+										const y = d3.scaleLinear()
+											.domain([0, d3.max(data, d => d.count)])
+											.range([height, 0]);
+
+										svg.append("g")
+											.attr("class", "x-axis")
+											.attr("transform", `translate(0,${height})`)
+											.call(d3.axisBottom(x));
+
+										svg.append("g")
+											.attr("class", "y-axis")
+											.call(d3.axisLeft(y));
+
+										svg.selectAll(".bar")
+											.data(data)
+											.enter()
+											.append("rect")
+											.attr("class", "bar")
+											.attr("x", d => x(d.room_type))
+											.attr("y", d => y(d.count))
+											.attr("width", x.bandwidth())
+											.attr("height", d => height - y(d.count))
+											.attr("fill", "steelblue");
+									});
+								});
 							</script>
 						
 						
