Refactor CSS to update tab label color and navigation CSS to remove arrow styling

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 						<div id="content" class="sharebnb">ShareBnB</div>
 						<div class="tab-content">
 							<div>
-								<h3>
+								<h3 style="color: black;">
 									In vielen Großstädten wird Wohnraum knapp, während immer mehr Wohnungen über Plattformen wie Airbnb an Tourist*innen vermietet werden. 
 									Dies trägt zur Verdrängung von Einheimischen und steigenden Mietpreisen bei. 
 									Unsere Visualisierung zeigt die Verteilung von Airbnb-Angeboten in sieben Städten und soll ein Bewusstsein für die Auswirkungen auf den Wohnungsmarkt schaffen.
 								</h3>
 							</div>
 							<div>
-								<h6>
+								<h6 style="color: black;">
 									Dr. Franklin Hernández Castro
 									<br>Data Visualisation<br> HfG Schwäbisch Gmünd IG3 
 									<br>Jonas Wienberg, Marlon Mutlu, Philipp Maginot
