--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<section>
 				<div class="container">
 					<label for="tab_1">
-						<div id="content" class="sharebnb">ShareBnB</div>
+						<div id="content" class="sharebnb" style="color: black;">ShareBnB</div>
 						<div class="tab-content">
 							<div>
 								<h3 style="color: black;">
