Refactor CSS and add new JavaScript files for New York apartment listings

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="css/tab-interaction.css">
 		<link rel="stylesheet" href="css/content.css">
 		<link rel="stylesheet" href="css/navigation.css">
-
+        <link rel="stylesheet" href="css/newyork_dots.css" />	
 	</head>
 	<body>
 		<main>
@@ -56,6 +56,7 @@
 							<h3>
 								<span id="airbnb-index-new-york">Loading...</span>
 							</h3>
+							<script src="js/newyork.js"></script>
 						</div>
 					</label>
 
@@ -106,5 +107,7 @@
 		</main>
 		<script type="module" src="js/script.js"></script>
 		<script type="module" src="js/script4.js"></script>
+		<script src="/data/apartmentPrices.js"></script>
+		<script src="js/newyork.js"></script>
 	</body>
 </html>
