--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="css/content.css">
 		<link rel="stylesheet" href="css/navigation.css">
         <link rel="stylesheet" href="css/newyork_dots.css" />	
+		<link rel="stylesheet" href="css/tokio.css">
 	</head>
 	<body>
 		<main>
@@ -78,8 +79,11 @@
 							<h3>
 								<span id="airbnb-index-tokyo">Loading...</span>
 							</h3>
-							</h3>
+							<div id="treemap-container" style="width: 100%; height: 500px;"></div>
+							
 						</div>
+							<script src="data/tokyo.js"></script> <!-- Tokyo-Daten laden -->
+							<script type="module" src="js/script_tokio.js"></script>
 					</label>
 
 					<label for="tab_4">
