Refactor CSS and JavaScript for Tokyo apartment listings

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="css/content.css">
 		<link rel="stylesheet" href="css/navigation.css">
         <link rel="stylesheet" href="css/newyork_dots.css" />	
-		<link rel="stylesheet" href="css/tokio.css">
+		<link rel="stylesheet" href="css/tokyo.css">
 	</head>
 	<body>
 		<main>
@@ -62,7 +62,7 @@
 					</label>
 
 					<label for="tab_3">
-						<div id="content" class="tokio">TOKIO</div>
+						<div id="content" class="tokyo">TOKYO</div>
 						<div class="tab-content">
 							<h1>
 								N° of Airbnb listings
@@ -83,7 +83,7 @@
 							
 						</div>
 							<script src="data/tokyo.js"></script> <!-- Tokyo-Daten laden -->
-							<script type="module" src="js/script_tokio.js"></script>
+							<script type="module" src="js/script_tokyo.js"></script>
 					</label>
 
 					<label for="tab_4">
