Refactor Tokyo data import and update file paths

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<div id="treemap-container" style="width: 100%; height: 500px;"></div>
 							
 						</div>
-							<script src="data/tokyo.js"></script> <!-- Tokyo-Daten laden -->
+							<script type="module" src="data/tokyo.js"></script> <!-- Tokyo-Daten laden -->
 							<script type="module" src="js/script_tokyo.js"></script>
 					</label>
 
