--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
 								style="width: 100%; height: 500px"
 							></div>
 						</div>
-							<script type="module" src="data/tokyo.js"></script> <!-- Tokyo-Daten laden -->
-							<script type="module" src="js/script_tokyo.js"></script>
+						<script type="module" src="data/tokyo.js"></script>
+						<!-- Tokyo-Daten laden -->
+						<script type="module" src="js/script_tokyo.js"></script>
 					</label>
 
 					<label for="tab_4">
