--- a/index.html
+++ b/index.html
@@ -103,10 +103,8 @@
 							<h3>
 								<span id="airbnb-index-tokyo">Loading...</span>
 							</h3>
-							<div
-								id="treemap-container"
-								style="width: 100%; height: 500px"
-							></div>
+							<h3>
+								<div id="treemap-container" style="width: 100%; height: 500px"></div>
 						</div>
 							<script type="module" src="data/tokyo.js"></script> <!-- Tokyo-Daten laden -->
 							<script type="module" src="js/script_tokyo.js"></script>
