--- a/index.html
+++ b/index.html
@@ -50,13 +50,12 @@
 					</label>
 
 <label for="tab_2">
-	<div id="content" class="newyork">NEW YORK CITY</div>
+	<div id="content" class="new-york">NEW YORK CITY</div>
 	<div class="tab-content">
 		<div style="display: flex; flex-wrap: wrap;">
 			<div style="flex: 1 1 50%; padding: 10px;">
 				<h1>
 					N° of Airbnb listings
-					<span class="city-name">New York City</span>
 					<span id="total-ids-new-york">Loading...</span>
 				</h1>
 			</div>
@@ -80,7 +79,7 @@
 				<!-- Empty div for layout purposes -->
 			</div>
 		</div>
-		<script type="module" src="js/script_new_york.js"></script>
+		<script type="module" src="js/script_newyork.js"></script>
 	</div>
 </label>
 
