Refactor script imports in index.html

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 				<!-- Empty div for layout purposes -->
 			</div>
 		</div>
-		<script type="module" src="js/script_newyork.js"></script>
+		<script src="/data/apartmentPrices.js"></script>
+		<script src="js/newyork.js"></script>
 	</div>
 </label>
 
