--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
 							</h3>
 							<h3>
 								<div id="treemap-container" style="width: 100%; height: 500px"></div>
+								<div id="percentage-output"></div>
+
 						</div>
 						<script type="module" src="data/tokyo.js"></script>
 						<!-- Tokyo-Daten laden -->
