--- a/circle.html
+++ b/circle.html
@@ -4,79 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Comparison Circles</title>
-
-    <style>
-        /* Lade die Schriftart Inter von Google Fonts */
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
-
-        body {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #c5ecc9;
-            font-family: 'Inter', sans-serif; /* Setze die Schriftart auf Inter */
-        }
-
-        canvas {
-            background-color: #c5ecc9;
-        }
-
-        .label-container {
-            display: flex;
-            justify-content: space-between;
-            width: 500px;
-            margin-bottom: 10px;
-        }
-
-        .label {
-            font-weight: bold;
-            font-size: 24px;
-        }
-
-        #slider-container {
-            width: 30%; /* Nochmals die Breite um 50% reduziert (vorher 60%) */
-            margin-top: 20px;
-            position: relative;
-        }
-
-        #slider {
-            width: 100%;
-            appearance: none;
-            height: 3px; /* Höhe des Sliders nochmals um 50% reduziert */
-            background: white; /* Slider-Hintergrund auf weiß setzen */
-            border-radius: 5px;
-            outline: none;
-        }
-
-        /* Slider-Styling für WebKit-basierte Browser (Chrome, Safari, Edge) */
-        #slider::-webkit-slider-thumb {
-            appearance: none;
-            width: 7px; /* Größe des Daumenknopfes nochmals um 50% reduziert */
-            height: 7px; /* Höhe des Daumenknopfes nochmals um 50% reduziert */
-            background: #333; /* Daumenknopf des Sliders */
-            border-radius: 50%;
-            cursor: pointer;
-        }
-
-        /* Slider-Styling für Firefox */
-        #slider::-moz-range-thumb {
-            width: 7px; /* Größe des Daumenknopfes nochmals um 50% reduziert */
-            height: 7px; /* Höhe des Daumenknopfes nochmals um 50% reduziert */
-            background: #333;
-            border-radius: 50%;
-            cursor: pointer;
-        }
-
-        #slider-value {
-            font-size: 16px;
-            text-align: center;
-            margin-top: 5px;
-        }
-
-    </style>
+    <link rel="stylesheet" href="css/circle.css">
 </head>
 <body>
 
