--- a/indextest.html
+++ b/indextest.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +9,13 @@
             font-family: 'Inter', sans-serif;
         }
         #treemap-container {
-            margin: 20px;
+            width: 700px;
+            height: 500px;
+            margin: 0 auto;
         }
         #percentage-output {
-            margin: 20px;
+            text-align: center;
+            margin-top: 20px;
             font-size: 18px;
             font-weight: bold;
         }
@@ -30,8 +33,8 @@
         const height = 500;
 
         const color = d3.scaleOrdinal()
-            .domain(["Entire home/apt", "Private room", "Shared room", "Hotel room"])
-            .range(["#fff", "#E5E5E5", "#858585", "#b3b3b3"]);
+            .domain(["1", "2", "3", "4", "5+"])
+            .range(["#fff", "#E5E5E5", "#858585", "#b3b3b3", "#666666"]);
 
         const svg = d3
             .select("#treemap-container")
@@ -42,21 +45,21 @@
 
         const data = tokyoData;
 
-        const roomTypeData = d3.rollup(
+        const hostListingsData = d3.rollup(
             data,
             (v) => v.length,
-            (d) => d.room_type
+            (d) => d.calculated_host_listings_count >= 5 ? "5+" : d.calculated_host_listings_count.toString()
         );
 
         const totalEntries = data.length;
-        const entireHomeCount = roomTypeData.get("Entire home/apt") || 0;
+        const entireHomeCount = hostListingsData.get("Entire home/apt") || 0;
         const percentageEntireHome = ((entireHomeCount / totalEntries) * 100).toFixed(2);
 
         d3.select("#percentage-output")
             .text(`In ${percentageEntireHome}% der Zeit hast du ein Appartment für dich alleine.`);
 
         const root = d3
-            .hierarchy({ children: Array.from(roomTypeData, ([key, value]) => ({ name: key, value })) })
+            .hierarchy({ children: Array.from(hostListingsData, ([key, value]) => ({ name: key, value })) })
             .sum((d) => d.value)
             .sort((a, b) => b.value - a.value);
 
@@ -79,69 +82,14 @@
             .append("text")
             .attr("x", 10)
             .attr("y", 20)
-            .text((d) => `${d.data.name}: ${d.value}`)
+            .text((d) => `Listings: ${d.data.name}: ${d.value}`)
             .attr("fill", "#000")
             .style("font-size", "14px")
             .style("font-weight", "bold");
 
-        function updateTreemap(roomType) {
-            const filteredData = data.filter((d) => d.room_type === roomType);
-
-            const hostListingsData = d3.rollup(
-                filteredData,
-                (v) => v.length,
-                (d) => d.calculated_host_listings_count
-            );
-
-            const newRoot = d3
-                .hierarchy({ children: Array.from(hostListingsData, ([key, value]) => ({ name: key, value })) })
-                .sum((d) => d.value)
-                .sort((a, b) => b.value - a.value);
-
-            d3.treemap().size([width, height]).padding(2)(newRoot);
-
-            const nodes = svg.selectAll("g").data(newRoot.leaves());
-
-            nodes
-                .enter()
-                .append("g")
-                .merge(nodes)
-                .attr("transform", (d) => `translate(${d.x0},${d.y0})`)
-                .each(function (d) {
-                    const g = d3.select(this);
-
-                    g.selectAll("rect")
-                        .data([d])
-                        .enter()
-                        .append("rect")
-                        .merge(g.selectAll("rect"))
-                        .attr("width", (d) => d.x1 - d.x0)
-                        .attr("height", (d) => d.y1 - d.y0)
-                        .attr("fill", (d) => color(roomType));
-
-                    g.selectAll("text")
-                        .data([d])
-                        .enter()
-                        .append("text")
-                        .merge(g.selectAll("text"))
-                        .attr("x", 10)
-                        .attr("y", 20)
-                        .text((d) => `Host Listings: ${d.data.name}: ${d.value} AirBnBs`)
-                        .attr("fill", "#000")
-                        .style("font-size", "14px")
-                        .style("font-weight", "lighter");
-                });
-
-            nodes.exit().remove();
-
-            nodes.on("click", () => {
-                drawInitialTreemap();
-            });
-        }
-
         function drawInitialTreemap() {
             const root = d3
-                .hierarchy({ children: Array.from(roomTypeData, ([key, value]) => ({ name: key, value })) })
+                .hierarchy({ children: Array.from(hostListingsData, ([key, value]) => ({ name: key, value })) })
                 .sum((d) => d.value)
                 .sort((a, b) => b.value - a.value);
 
@@ -173,7 +121,7 @@
                         .merge(g.selectAll("text"))
                         .attr("x", 10)
                         .attr("y", 20)
-                        .text((d) => `${d.data.name}: ${d.value} AirBnBs`)
+                        .text((d) => `Listings: ${d.data.name}: ${d.value} AirbnBs`)
                         .attr("fill", "#000")
                         .style("font-size", "14px")
                         .style("font-weight", "lighter");
