Refactor CSS and HTML files: Update styles and positioning for New York dots and info text

--- a/index.html
+++ b/index.html
@@ -53,10 +53,8 @@
 					<label for="tab_2">
 						<div id="content" class="new-york">NEW YORK</div>
 						<div class="tab-content">
-							<div class="dots-wrapper" id="dots"></div>
-							<p id="info-text">
-								Out of 50 people, only a few can afford to live
-								in NYC based on the median income.
+							<div class="dots-wrapper" id="dots" style="transform: translateX(-100px); transform: translateY(520px);"></div>
+							<p id="info-text" style="transform: translateX(-660px); transform: translateY(520px);"></p>
 							</p>
 						</div>
 					</label>
